# Hacketon_ReaAaS-n

./: .gitmodules  Dockerfile.live_test  Makefile  README.md  azure-pipelines.yml  demo.py  discords_hook.txt  docker-compose.yml  human_hub.py  model.py  modulesettings.json  package-lock.json  pyproject.toml  requirements.txt  setup-commands.sh  setup.py  setup.sh  test_airbyte_connection.py  {{null}}.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
NeutroQuantumModule.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ReaAaS-n/setup/: deppseekpromt.py
docs/: modules.md  neutro_quantum_module.py  quantum_demo.py  uri = mongodb+srvsennntiScrde.ca747.txt
docs/mcp/: 21st-dev-magic.md  adfin.md  agentql.md  agentrpc.md  aiven.md  apache-iotdb.md  apify.md  apimatic-mcp.md  astra-db.md  audiense-insights.md  aws-kb-retrieval.md  axiom.md  bankless-onchain.md  bicscan.md  bitrise.md  box.md  brave-search.md  browserbase.md  chargebee.md  chroma.md  chronulus-ai.md  circleci.md  clickhouse.md  cloudflare.md  codacy.md  codelogic.md  comet-opik.md  convex.md  dart.md  devhub.md  e2b.md  edubase.md  elasticsearch.md  esignatures.md  everart.md  everything.md  exa.md  fetch.md  (+21 more)
env/: pyvenv.cfg
neutrosophic quantum FfeD enhancement/: core.py  db_config.py  grid_optimizer.py  home_controller.py  hyd_dr_core.py  mindsdb_integration.py  mindsdb_model.py  optimization_engine.py  python_library.py  qua_at_core.py  quantum.py  quantum_sensor_network.py  quantum_simulator.py  quantum_state_control.py
tests/: live_test.py  test_db_config.py
(+16 files in other folders)
